Finished making the page responsive including the mobile view

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 
     <!-- ?SSTYLE SHEET -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
+
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
     <div class="main">
       <div class="product">
-        <img
-          class="product-image"
-          alt="product image"
-          src="images/image-product-desktop.jpg"
-        />
+        <div class="img">
+          <img
+            class="product-image"
+            alt="product image"
+            src="images/image-product-desktop.jpg"
+          />
+        </div>
         <div class="product-details">
           <p class="product-type">Perfume</p>
           <p class="product-name">Gabrielle Essence Eau De Parfum</p>
